Channel key error: color spaces modes #45736

Closed
opened 2015-08-08 22:13:20 +02:00 by Alexey · 8 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)
Short description of error
1.png
2.png
3.png
Exact steps for others to reproduce the error
Channel Key.blend1
open, render, switch between color space modes - we will see proper working only in RGB mode
Link matte out - we will have proper result in all modes

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![1.png](https://archive.blender.org/developer/F221882/1.png) ![2.png](https://archive.blender.org/developer/F221884/2.png) ![3.png](https://archive.blender.org/developer/F221886/3.png) **Exact steps for others to reproduce the error** [Channel Key.blend1](https://archive.blender.org/developer/F221888/Channel_Key.blend1) open, render, switch between color space modes - we will see proper working only in RGB mode Link matte out - we will have proper result in all modes
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscribers: @Sergey, @Jeroen-Bakker, @mont29

Added subscribers: @Sergey, @Jeroen-Bakker, @mont29

Something looks wrong here indeed, keying node outputs image in selected keying colorspace, as you can see in attached .blend if you separate RGBA and combine HSVA you get back your correct image.

Channel Key.blend

No idea whether this is intended behavior or not, @Sergey? @Jeroen-Bakker?

Something looks wrong here indeed, keying node outputs image in selected keying colorspace, as you can see in attached .blend if you separate RGBA and combine HSVA you get back your correct image. [Channel Key.blend](https://archive.blender.org/developer/F223745/Channel_Key.blend) No idea whether this is intended behavior or not, @Sergey? @Jeroen-Bakker?

This issue was referenced by c749fe4031

This issue was referenced by c749fe40317b6d1bcc4aa7230f660b8704878f69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

this error is resolved for compositing result only, but in node preview we will have incorrect picture
Image1.png

this error is resolved for compositing result only, but in node preview we will have incorrect picture ![Image1.png](https://archive.blender.org/developer/F229953/Image1.png)

Indeed, should be fixed now in 390bc05.

Indeed, should be fixed now in 390bc05.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45736
No description provided.