Fix T45736: Channel key error: color spaces modes

Was missing conversion back to RGB space.